<resources>
    <string name="app_name">微应用</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button_txt_add_2">立即添加</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_secret">我的密保</string>

    <string name="view_secret_main_title">请输入口令</string>
    <string name="view_secret_main_btn_cancel">C</string>
    <string name="view_secret_main_btn_ok">√</string>
    <string name="view_secret_main_hint1">首次输入的口令将作为你今后的口令，建议8位以上，请妥善保管。</string>
    <string name="view_secret_main_hint2">为防止暴力破解，错误的口令一样可以进入，只是得到错误的内容。</string>
    <string name="view_secret_home_empty">你还没有任何项</string>
    <string name="view_secret_edit_title_lbl">标题</string>
    <string name="view_secret_edit_title_hint">请输入标题</string>
    <string name="view_secret_edit_group_lbl">分组名称</string>
    <string name="view_secret_edit_group_hint">输入或选择一个分组</string>
    <string name="view_secret_edit_name_lbl">账号</string>
    <string name="view_secret_edit_name_hint">请输入你的账号或标识名称</string>
    <string name="view_secret_edit_pwd_lbl">密码</string>
    <string name="view_secret_edit_pwd_hint">请输入密码</string>
    <string name="view_secret_edit_repwd_lbl">确认密码</string>
    <string name="view_secret_edit_repwd_hint">请再次输入密码</string>


</resources>
