<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.shicy.common.views.form.MyEditText
            android:id="@+id/secret_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/view_secret_edit_title_lbl"
            app:placeholder="@string/view_secret_edit_title_hint"/>

        <org.shicy.common.views.form.MyEditText
            android:id="@+id/secret_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/view_secret_edit_name_lbl"
            app:placeholder="@string/view_secret_edit_name_hint"
            android:layout_marginTop="15dp"/>

        <org.shicy.common.views.form.MyEditText
            android:id="@+id/secret_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/view_secret_edit_pwd_lbl"
            app:placeholder="@string/view_secret_edit_pwd_hint"
            android:layout_marginTop="15dp"/>

        <org.shicy.common.views.form.MyEditText
            android:id="@+id/secret_edit_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/view_secret_edit_repwd_lbl"
            app:placeholder="@string/view_secret_edit_repwd_hint"
            android:layout_marginTop="15dp"/>

        <TextView android:id="@+id/secret_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textSize="12sp"
            android:text="@string/my_txt_empty"/>

    </LinearLayout>

</ScrollView>